5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1875_1724.log
== TEST (2019-07-02 18:16:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("numeros de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
mt=zeros(1,b)
for i in range(b):
	for j in range(b):
		mt[i,j]=m[i,j]*m[i,j+1]
total=sum(mt)
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:17:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
mt=zeros[1,b]
for i in range(b):
	for j in range(b):
		mt[i,j]=m[i,j]*m[i,j+1]
total=sum(mt)
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:19:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]

for i in range(b):
	for j in range(b):
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:21:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
total=0
for i in range(b):
	for j in range(b):
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:22:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
total=0
for i in range(b):
	for j in range(b):
		total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:24:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
total=0
for i in range(b):
	total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
c=shape(m)[0]
total=0
for i in range(b):
	for j in range(c):	
	total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
File "XXXX", line 11
    total=m[i,j]*m[i,(j+1)]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
c=shape(m)[0]
total=0
for i in range(b):
	for j in range(c):	
	total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
File "XXXX", line 11
    total=m[i,j]*m[i,(j+1)]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
c=shape(m)[0]
total=0
for i in range(b):
	for j in range(c):	
	total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
File "XXXX", line 11
    total=m[i,j]*m[i,(j+1)]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
c=shape(m)[0]
total=0
for i in range(b):
	for j in range(c):	
	total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
File "XXXX", line 11
    total=m[i,j]*m[i,(j+1)]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
c=shape(m)[0]
total=0
for i in range(b):
	for j in range(c):	
	total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
File "XXXX", line 11
    total=m[i,j]*m[i,(j+1)]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:25:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
c=shape(m)[0]
total=0
for i in range(b):
	for j in range(c):	
	total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
File "XXXX", line 11
    total=m[i,j]*m[i,(j+1)]
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:26:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
c=shape(m)[0]
total=0
for i in range(b):
	for j in range(c):	
		total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:26:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
c=shape(m)[0]
total=0
for i in range(b):
	for j in range(2):	
		total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:31:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
print(b)
total=0
for i in range(b):
	for j in range(2):	
		total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:31:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
print(b)
total=0
for i in range(b):
	for j in range(2):	
		total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:31:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
print(b)
total=0
for i in range(b):
	for j in range(b):	
		total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:32:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]

total=0
for i in range(b):
	for j in range(2):	
		total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:33:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
print(range(2))
total=0
for i in range(b):
	for j in range(2):	
		total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:34:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]

total=0
for i in range(b):
	for j in range(b):	
		total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:35:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]

total=0
for i in range(b):
	for j in range(b):	
		total=m[i,j]*m[i,(j+1)]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:37:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]

total=0
for i in range(b):
	for j in size(b):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:37:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]

total=0
for i in range(b):
	for j in range(size(b)):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:38:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]

total=0
for i in range(b):
	for j in range(b):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:40:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
cu=zeros[1,b]
print(cu)
total=0
for i in range(b):
	for j in range(b):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:40:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
cu=zeros(1,b)
print(cu)
total=0
for i in range(b):
	for j in range(b):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:41:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
cu=zeros([1,b])
print(cu)
total=0
for i in range(b):
	for j in range(b):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:41:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
total=0
for i in range(b):
	for j in range(b):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
total=0
for i in range(b):
	for j in range(size(m)):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:42:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
total=0
for i in range(b):
	for j in range(size(m)):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:43:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
total=0
for i in range(b):
	for j in range(size(m)):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:43:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[1]
total=0
print(b)
for i in range(b):
	for j in range(size(m)):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:43:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
total=0
print(b)
for i in range(b):
	for j in range(size(m)):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:44:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0

for i in range(b):
	for j in range(c):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0
for i in range(b):
	for j in range(c):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:45:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0
for i in range(b):
	for j in range(c):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:46:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0
print(c)
for i in range(b):
	for j in range(c):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:46:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0
printrange((c))
for i in range(b):
	for j in range(c):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:46:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0
print(range(c))
for i in range(b):
	for j in range(c):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:47:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0
print(range(b))
for i in range(b):
	for j in range(c):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:47:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0
print(range(b))
for i in range(b):
	for j in range(c):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))

-- EXECUTION TIME:
0.86864
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/1724/main.py", line 12, in <module>
    total=m[i,j]*m[i,j+1]
IndexError: index 2 is out of bounds for axis 1 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:48:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0

for i in m:
	for j in m:	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:49:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0

for i in range(b):
	for j in range(c):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:49:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
total=0

for i in range(b):
	for j in range(c-1):	
		total=m[i,j]*m[i,j+1]

print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:51:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
mt=zeros([1,b])

for i in range(b):
	for j in range(c-1):	
		mt[i,j]=m[i,j]*m[i,j+1]
total=sum(mt)
print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:51:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
mt=zeros([1,b])

for i in range(b):
	for j in range(c-1):	
		mt[1,j]=m[i,j]*m[i,j+1]
total=sum(mt)
print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:52:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
mt=zeros([1,b])
print(mt)
for i in range(b):
	for j in range(c-1):	
		mt[1,j]=m[i,j]*m[i,j+1]
total=sum(mt)
print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:53:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
mt=zeros(3, dtype=int)
print(mt)
for i in range(b):
	for j in range(c-1):	
		mt[i]=m[i,j]*m[i,j+1]
total=sum(mt)
print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:53:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
mt=zeros(3, dtype=float)

for i in range(b):
	for j in range(c-1):	
		mt[i]=m[i,j]*m[i,j+1]
total=sum(mt)
print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:53:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
mt=zeros(3, dtype=float)

for i in range(b):
	for j in range(c-1):	
		mt[i]=m[i,j]*m[i,j+1]
total=sum(mt)
print(round(total, 2))

-- EXECUTION TIME:
0.862427
-- TEST CASE 1:
---- input:
[[8.7,8.6],[5.3,8.0],[0.3,4.4]]
---- correct output:
118.54
---- user output:
118.54
-- TEST CASE 2:
---- input:
[[9.5,0.5],[1.4,5.3],[9.4,2.6]]
---- correct output:
36.61
---- user output:
36.61
-- TEST CASE 3:
---- input:
[[9.4,3.0],[3.9,6.2],[8.8,5.2],[2.1,2.0]]
---- correct output:
102.34
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:54:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
vt=zeros(3, dtype=float)
for i in range(b):
	for j in range(c-1):	
		vt[i]=m[i,j]*m[i,j+1]
total=sum(vt)
print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:54:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
vt=zeros(3, dtype=float)
for i in range(b):
	for j in range(c-1):	
		vt[i]=m[i,j]*m[i,j+1]
total=sum(vt)
print(round(total, 2))

-- EXECUTION TIME:
0.949849
-- TEST CASE 1:
---- input:
[[8.7,8.6],[5.3,8.0],[0.3,4.4]]
---- correct output:
118.54
---- user output:
118.54
-- TEST CASE 2:
---- input:
[[9.5,0.5],[1.4,5.3],[9.4,2.6]]
---- correct output:
36.61
---- user output:
36.61
-- TEST CASE 3:
---- input:
[[9.4,3.0],[3.9,6.2],[8.8,5.2],[2.1,2.0]]
---- correct output:
102.34
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:57:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
vt=zeros(c, dtype=float)
for i in range(b):
	for j in range(c-1):	
		vt[i]=m[i,j]*m[i,j+1]
total=sum(vt)
print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:57:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
vt=zeros(c, dtype=float)
for i in range(b):
	for j in range(c-1):	
		vt[i]=m[i,j]*m[i,j+1]
total=sum(vt)
print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:57:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
vt=zeros(b, dtype=float)
for i in range(b):
	for j in range(c-1):	
		vt[i]=m[i,j]*m[i,j+1]
total=sum(vt)
print(round(total, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:57:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
vt=zeros(b, dtype=float)
for i in range(b):
	for j in range(c-1):	
		vt[i]=m[i,j]*m[i,j+1]
total=sum(vt)
print(round(total, 2))

-- EXECUTION TIME:
0.9816
-- TEST CASE 1:
---- input:
[[8.7,8.6],[5.3,8.0],[0.3,4.4]]
---- correct output:
118.54
---- user output:
118.54
-- TEST CASE 2:
---- input:
[[9.5,0.5],[1.4,5.3],[9.4,2.6]]
---- correct output:
36.61
---- user output:
36.61
-- TEST CASE 3:
---- input:
[[9.4,3.0],[3.9,6.2],[8.8,5.2],[2.1,2.0]]
---- correct output:
102.34
---- user output:
102.34
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:58:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
#definimos a entrada da matriz de produtos:
m=array(eval(input("matriz de produtos: ")))
#matriz com total de compras:
b=shape(m)[0]
c=shape(m)[1]
vt=zeros(b, dtype=float)
for i in range(b):
	for j in range(c-1):	
		vt[i]=m[i,j]*m[i,j+1]
total=sum(vt)
print(round(total, 2))

-- EXECUTION TIME:
1.29993
-- TEST CASE 1:
---- input:
[[8.7,8.6],[5.3,8.0],[0.3,4.4]]
---- correct output:
118.54
---- user output:
118.54
-- TEST CASE 2:
---- input:
[[9.5,0.5],[1.4,5.3],[9.4,2.6]]
---- correct output:
36.61
---- user output:
36.61
-- TEST CASE 3:
---- input:
[[9.4,3.0],[3.9,6.2],[8.8,5.2],[2.1,2.0]]
---- correct output:
102.34
---- user output:
102.34
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
